<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/result"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:contentDescription="@string/traphy"
        android:src="@drawable/ic_trophy" />

    <TextView
        android:id="@+id/tv_congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/congratulations"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/your_score_is_9_10"/>

    <TextView
        android:id="@+id/finish"
        android:layout_width="120dp"
        android:gravity="center"
        android:padding="8dp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/finish12"
        android:background="@color/white"
        />

</LinearLayout>